@@ -343,8 +343,8 @@ echo "=== Running test $0"
 # files from an old version of Automake that we don't want to use.
 # Use `-Wno-syntax' because we do not want our test suite to fail because
 # some third-party .m4 file is underquoted.
-case $required in
-  *libtool* | *gettext* )
+case " $required " in
+  *' libtool '* | *' libtoolize '* | *' gettext '* )
     aclocaldir='@prefix@/share/aclocal'
     extra_includes=""
     if test -f $aclocaldir/dirlist; then
@@ -365,9 +365,9 @@ case $required in
 	  gettext_found=yes
        fi
     done
-    case $required in
-      *libtool* ) test $libtool_found = yes || Exit 77 ;;
-      *gettext* ) test $gettext_found = yes || Exit 77 ;;
+    case " $required " in
+      *' libtool '* | *' libtoolize '* ) test $libtool_found = yes || Exit 77 ;;
+      *' gettext '* ) test $gettext_found = yes || Exit 77 ;;
     esac
     # Libtool cannot cope with spaces in the build tree.  Our testsuite setup
     # cannot cope with spaces in the source tree name for Libtool and gettext
