@@ -1,3 +1,9 @@
+2010-09-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	Improve code for requiring libtool and gettext in tests.
+	* tests/defs.in: Stricter (and more correct) detection of wheter
+	libtool, libtoolize and/or gettext are in $required.
+
 2010-08-31  Peter Rosin  <peda@lysator.liu.se>
 
 	Do file name conversion for object files in the compile wrapper.
